--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <header>
         <h1>Deya Terapias Orientais</h1>
         <p>Equilíbrio e bem-estar ao seu alcance</p>
-        <img src="imagens/reflexologia-header.jpg" alt="Reflexologia nos pés">
+        
     </header>
 
     <section class="about">
         <h2>Sobre a Deya Terapias Orientais</h2>
         <p>Na Deya Terapias Orientais, acreditamos na sabedoria ancestral como caminho para o equilíbrio e a harmonia do corpo e da mente. Nossa missão é oferecer terapias naturais que promovam bem-estar profundo e qualidade de vida.</p>
         <p>Entre as técnicas oferecidas, a <strong>reflexologia</strong> se destaca por sua simplicidade, eficácia e conexão com os processos naturais de cura do organismo.</p>
-        <img src="imagens/massagem-pes.jpg" alt="Massagem relaxante nos pés">
+        <img src="imagens/massagem-pes.jpeg" alt="Massagem relaxante nos pés">
     </section>
 
     <section class="reflexology">
         <h2>O que é Reflexologia?</h2>
         <p>A reflexologia é uma técnica terapêutica que utiliza a aplicação de pressão em pontos específicos dos pés, mãos ou orelhas, que correspondem a diferentes órgãos e sistemas do corpo. Essa prática visa estimular o processo natural de autocura, promover relaxamento e melhorar a circulação sanguínea. É uma terapia complementar que busca equilibrar o indivíduo para manter a saúde e o bem-estar.</p>
-        <img src="imagens/mapa-reflexologia.jpg" alt="Mapa dos pontos de reflexologia nos pés">
+        
     </section>
 
     <section class="benefits">
